# microdepac

./: .gitignore  .gitmodules  gitstatus.txt  tree.txt
depac_lib/: wrapper_depac.f90
depac_lib_bu/: INIReader.h  wrapper_depac.f90
include/: chemistry.h_bu  chemistry.h_thermo_forward  deposition.h  deposition.h_bu  land_surface_kernels.h  radiation_prescribed.h
microhh/: .gitignore  CMakeLists.txt
microhh/build_depac_bu/: CMakeCache.txt
microhh/build_depac_bu/main/: Makefile
microhh/build_depac_bu/modules/: le_drydepos_gas_depac.mod
microhh/build_depac_bu/src/: Makefile
microhh/cases/base_model/: 1.py  base_input.py  cs_veg.0000000  forest.0000000  gD.0000000  grass_in.0000000  grass_out.0000000  lambda_stable.0000000  lsm_input.nc  plume_chem.ini  plume_chem.ini.base  plume_chem_input.nc  root_frac.0000000  rs_soil_min.0000000  rs_veg_min.0000000  t_bot_water.0000000  theta_soil.0000000
microhh/cases/drycblles/: drycblles.ini
microhh/cases/maarten_nh3_main/: 2.py  c_veg.0000000  cs_veg.0000000  dbdz_mo.0003600  dbdz_mo.0007200  dbdz_mo.0010800  dbdz_mo.0014400  dbdz_mo.0018000  dbdz_mo.0021600  dudz_mo.0003600  dudz_mo.0007200  dudz_mo.0010800  dudz_mo.0014400  dudz_mo.0018000  dudz_mo.0021600  dvdz_mo.0003600  dvdz_mo.0007200  dvdz_mo.0010800  dvdz_mo.0014400  dvdz_mo.0018000  dvdz_mo.0021600  fftwplan.0000000  gD.0000000  grid.0000000  lai.0000000  lambda_unstable.0000000  lsm_input.nc  nh3.0000000  nh3.0003600  nh3.0007200  nh3.0010800  nh3.0014400  nh3.0018000  nh3.0021600  nh3.xy.000.00000.0000060  nh3.xy.000.00000.0000120  nh3.xy.000.00000.0000180  nh3.xy.000.00000.0000240  (+23547 more)
microhh/depac_lib/: le_drydepos_gas_depac_complete.f90  wrapper_depac.f90
microhh/depac_lib_bu/: compile_c.sh  compiler_of_the_main_test_file.sh  depac  depac_wrapper_test.mod  header_depac.h  lai_calculator.f90  lai_calculator.mod  lai_wrapper.f90  lai_wrapper.h  lai_wrapper.h.gch  le_drydepos_gas_depac.f90  le_drydepos_gas_depac.mod  main.cxx  main.cxx_without_TF  main_org.cxx  main_vdnh3.cxx
microhh/include/: chemistry.h  deposition.h  deposition.h_thermo_forward  thermo_moist_functions.h
microhh/src/: CMakeLists.txt_bu2_lai_calc  chemistry.cxx  chemistry.cxx_bu  deposition.cxx  deposition.cxx_bu2  deposition.cxx_bu3  deposition.cxx_depac_bu  deposition.cxx_thermo_forward  model.cxx  model.cxx_bu  model.cxx_thermo_forward  text.txt
src/: CMakeLists.txt  chemistry.cxx  deposition.cxx  deposition.cxx_bu  deposition.cxx_ifs_bu  radiation_prescribed.cxx
(+2485 files in other folders)
